2009-04-14  David Ayers  <ayers@fsfe.org>

	* configure.ac: Warn if GDL2 isn't found.
	* configure: Regenerate.
	
2009-04-07  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWeb.h (GSWImageInfo): Foward declare.
	* GSWeb.framework/GSWHTMLDynamicElement.h/m
	(-/+[_frameworkNameForAssociation:inComponent:]): Convert to class
	method.  Cleanup implementation.
	* GSWeb.framework/GSWImage.m
	(+[_appendFilenameToResponse:inContext:framework:filename:width:height:]):
	Add handling for image url and cleanup implementation.
	(-[_appendFilenameToResponse:inContext:]): Delegate to class method.
	* GSWeb.framework/GSWResourceManager.h/m
	(-[_imageInfoForUrl:fileName:framework:languages:]): New method.
	(-[errorMessageUrlForResourceNamed:inFramework:]): Reformat.
	(-[_cacheData:]): Ditto.

	* Examples/WebBookStore1/BookStore.eomodeld/index.eomodeld:
	Update adaptor name.

	* configure.ac: Add check for zlib and libpng.  Do not clobber LIBS
	and AUX_LIBS for libwrap check.
	* configure: Regenerate.
	* config.h.in (HAVE_LIBZ,HAVE_ZLIB): Update autoconf test to canonical
	name.
	(HAVE_LIBPNG): Add new test for libpng.
	* GSWeb.framework/GSWPngImageInfo.h/m: New files.
	* GSWeb.framework/GSWeb.h (GSWPngImageInfo): Add declaration and include.
	* GSWeb.framework/GNUmakefile (GSWPngImageInfo.h/m): Add files.
	* GSWeb.framework/GSWImageInfo.m (GSWPngImageInfo): Remove reference to
	class.
	* GSWeb.framework/GSWResponse.m (HAVE_LIBZ,HAVE_ZLIB): Update references.
	* GSWeb.framework/NSData+Compress.h/m (HAVE_LIBZ,HAVE_ZLIB): Ditto.

	
2009-04-05  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWImageInfo.h/m: New files.
	* GSWeb.framework/GNUmakefile: Include new files.
	* GSWeb.framework/GSWWOCompatibility.h: Include new files.
	* GSWeb.framework/GSWeb.h: Include new header.
	
2008-10-24  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWDisplayGroup.h (HAVE_GDL2):
	Remove fallback to obsolete gnustep-db and default
	to GDL2 headers.